Bug 378418 - Auto-opening command line options missing in Kexi 3.0
Summary: Auto-opening command line options missing in Kexi 3.0
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 3.1.0 Alpha
Platform: Compiled Sources All
: NOR normal
Target Milestone: 3.0.2
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-03 23:55 UTC by Jarosław Staniek
Modified: 2017-04-10 10:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2017-04-03 23:55:37 UTC
There are the following auto-opening command line options in Kexi 2.x:

http://www.kexi-project.org/wiki/wikiview/index.php@CommandLineOptions.html#Options_related_to_opening_objects

They should be ported to Kexi 3.0.

Currently using them does not cause error bit they do nothing.
Comment 1 Jarosław Staniek 2017-04-05 23:00:02 UTC
(report by clickoclunko@gmail.com)
Comment 2 Jarosław Staniek 2017-04-06 16:24:45 UTC
Reviewing: https://phabricator.kde.org/D5322
Comment 3 Jarosław Staniek 2017-04-10 10:53:13 UTC
Git commit a41b632d5ae860f5bfc3a361ce9fb5b92e67d9e9 by Jaroslaw Staniek.
Committed on 10/04/2017 at 10:52.
Pushed by staniek into branch '3.0'.

Make auto-opening command line options work for Kexi again

Summary:
See http://www.kexi-project.org/wiki/wikiview/index.php@CommandLineOptions.html#Options_related_to_opening_objects
FIXED-IN:3.0.2

{F3547614}

Test Plan:
Run Kexi with options such as (trying more than one is OK):

--edittext query:"query20"
--open query:"query21"
--design query:"query22"

Defaults to table:
--open tablename

--design report:employees

--new table
--new query
--new report
--new form
dbname.kexi

Also try invalid combination, e.g.
--new foo (no such object type)
--new macro (no macros support yet)
--edittext tablename (can't open table in text/SQL view)
--open nonexisting (does not exist)

etc.

Reviewers: piggz

Tags: #kexi

Differential Revision: https://phabricator.kde.org/D5322

M  +8    -2    src/core/KexiCommandLineOptions.cpp
M  +5    -2    src/core/KexiCommandLineOptions.h
M  +3    -1    src/core/kexipartmanager.cpp
M  +5    -0    src/core/kexistartupdata.cpp
M  +5    -3    src/core/kexistartupdata.h
M  +98   -91   src/main/startup/KexiStartup.cpp
M  +1    -4    src/main/startup/KexiStartup.h

https://commits.kde.org/kexi/a41b632d5ae860f5bfc3a361ce9fb5b92e67d9e9