Make auto-opening command line options work for Kexi again

Summary:
See http://www.kexi-project.org/wiki/wikiview/index.php@CommandLineOptions.html#Options_related_to_opening_objects

BUG:378418
FIXED-IN:3.0.2

{F3547614}

Test Plan:
Run Kexi with options such as (trying more than one is OK):

--edittext query:"query20"
--open query:"query21"
--design query:"query22"

Defaults to table:
--open tablename

--design report:employees

--new table
--new query
--new report
--new form
dbname.kexi

Also try invalid combination, e.g.
--new foo (no such object type)
--new macro (no macros support yet)
--edittext tablename (can't open table in text/SQL view)
--open nonexisting (does not exist)

etc.

Reviewers: piggz

Tags: #kexi

Differential Revision: https://phabricator.kde.org/D5322